k8s/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway-service
  labels:
    name: apigateway-service
    app: demo-quote-app
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30006
  selector:
      name: api-server-delpoy
      app: demo-quote-app
