k8s/node-build-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    name: frontend-service
    app: demo-quote-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30005
  selector:
    name: frontend-app-name
    app: demo-quote-app
