k8s/php-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke-service
  labels:
    name: joke-service
    app: demo-quote-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  selector:
      name: php-app-name
      app: demo-quote-app
