k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - host: hostname.com
    http:
      paths:
      - path: /api/randomquote
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 3000
  - host: hostname.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: hostname.com
    http:
      paths:
      - path: /api/quote
        pathType: Prefix
        backend:
          service:
            name: quote-service
            port:
              number: 5000
  - host: hostname.com
    http:
      paths:
      - path: /api/status
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 3000
  - host: hostname.com
    http:
      paths:
      - path: /api/jokes
        pathType: Prefix
        backend:
          service:
            name: joke-service
            port:
              number: 80
  - host: hostname.com
    http:
      paths:
      - path: /api/randomjoke
        pathType: Prefix
        backend:
          service:
            name: apigateway-service
            port:
              number: 3000
